# terminal-audio-visualizer

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml  setup.py
audiovisualizer/: __init__.py
audiovisualizer/tests/: test.py
